--- a/css/main.css
+++ b/css/main.css
@@ -17,4 +17,22 @@ body #bg {
   position: absolute;
   z-index: -1;
 }
+
+body header a {
+  color: #fff;
+  text-decoration: none;
+  padding: 15px;
+  display: block;
+  text-transform: uppercase;
+}
+
+main section#shop {
+  background: #fff;
+  padding: 20px;
+  margin: 1em auto;
+  border-radius: 15px;
+  -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  width: 80%;
+}
 /*# sourceMappingURL=main.css.map */
