--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,13 @@ $colors: (
   accent: rgb(23, 176, 247)
 );
 
+$padding: 15px;
+$borders: 15px;
+
+@function color($color-name){
+  @return map-get($colors, $color-name)
+}
+
 body, html {
   height: 100%;
 }
@@ -15,10 +22,30 @@ body {
 
   #bg{
     clip-path: polygon(50% 0%, 100% 19%, 100% 100%, 0 100%, 0 0);
-    background-color: map-get($colors, primary);
+    background-color: color(primary);
     width: 100%;
     height: 100%;
     position: absolute;
     z-index: -1;
   }
+
+  header a {
+    color: #fff;
+    text-decoration: none;
+    padding: $padding;
+    display: block;
+    text-transform: uppercase;
+  }
+}
+
+main {
+  section#shop {
+    background: #fff;
+    padding: 20px;
+    margin: 1em auto;
+    border-radius: $borders;
+    box-shadow: 0 10px 30px rgba(0,0,0,.2);
+    width: 80%;
+  }
+
 }
