--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
 
 $colors: (
   primary: rgb(114, 132, 143),
+  primary-dark: lighten( rgb(114, 132, 143), 40%), 
   accent: rgb(23, 176, 247)
 );
 
@@ -10,6 +11,14 @@ $borders: 15px;
 
 @function color($color-name){
   @return map-get($colors, $color-name)
+}
+
+$desktop: 840px;
+
+@mixin desktop {
+  @media (min-width: #{$desktop}){
+    @content;
+  }
 }
 
 body, html {
@@ -21,12 +30,16 @@ body {
   margin: 0;
 
   #bg{
-    clip-path: polygon(50% 0%, 100% 19%, 100% 100%, 0 100%, 0 0);
+    clip-path: polygon(69% 0, 100% 9%, 100% 100%, 0 100%, 0 0);
     background-color: color(primary);
     width: 100%;
     height: 100%;
     position: absolute;
     z-index: -1;
+
+    @include desktop {
+      clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
+    }
   }
 
   header a {
@@ -39,13 +52,77 @@ body {
 }
 
 main {
-  section#shop {
+
+  @include desktop {
+    display: grid;
+    grid-template-columns: 50% auto;
+    grid-template-areas:
+      "shop info";
+  }
+
+  section#info {
     background: #fff;
     padding: 20px;
     margin: 1em auto;
     border-radius: $borders;
     box-shadow: 0 10px 30px rgba(0,0,0,.2);
     width: 80%;
+
+    @include desktop {
+      grid-area: info;
+      height: fit-content;
+      align-self: center;
+      margin: 1em;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0; padding: 0;
+
+      li {
+        margin-bottom: 10px;
+      }
+    }
   }
 
+  section#shop {
+    color: #fff;
+    padding: $padding;
+    text-align: center;
+
+    @include desktop {
+      grid-area: shop;
+      text-align: left;
+      margin: 4em 0 0 4em;
+    }
+
+    h1 {
+      font-size: 3em;
+      margin-top: 10px;
+      text-transform: uppercase;
+    }
+
+    p {
+      font-size: 1.4em;
+    }
+    
+    a {
+      color: color(primary-dark);
+      border-radius: $borders;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 2em;
+      background-color: color(accent);
+      display: block;
+      text-align: center;
+      margin: 50px auto 0 auto;
+      padding: $padding;
+
+      @include desktop {
+        display: inline-block;
+        padding: $padding $padding * 4;
+      }
+    }
+  }
 }
