--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,9 @@ body #bg {
   height: 100%;
   position: absolute;
   z-index: -1;
-}
-
-@media (min-width: 840px) {
-  body #bg {
-    -webkit-clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
-            clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
-  }
+  /*@include desktop {
+      background-color: color(primary);
+    }find way to get rid of clip path on desktop view*/
 }
 
 body header a {
@@ -39,17 +35,18 @@ body header a {
     display: grid;
     -ms-grid-columns: 50% auto;
         grid-template-columns: 50% auto;
-        grid-template-areas: "shop info";
+        grid-template-areas: "info shop";
   }
 }
 
 main section#info {
   background: #fff;
+  font-size: 1.25em;
   padding: 20px;
   margin: 1em auto;
   border-radius: 15px;
-  -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 10px 30px rgba(28, 31, 36, 0.2);
+          box-shadow: 0 10px 30px rgba(28, 31, 36, 0.2);
   width: 80%;
 }
 
@@ -94,6 +91,14 @@ main section#shop h1 {
   font-size: 3em;
   margin-top: 10px;
   text-transform: uppercase;
+}
+
+@media (min-width: 840px) {
+  main section#shop h1 {
+    width: 20%;
+    font-size: 3em;
+    line-height: 1em;
+  }
 }
 
 main section#shop p {
