--- a/css/main.scss
+++ b/css/main.scss
@@ -37,9 +37,9 @@ body {
     position: absolute;
     z-index: -1;
 
-    @include desktop {
-      clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
-    }
+    /*@include desktop {
+      background-color: color(primary);
+    }find way to get rid of clip path on desktop view*/
   }
 
   header a {
@@ -57,15 +57,16 @@ main {
     display: grid;
     grid-template-columns: 50% auto;
     grid-template-areas:
-      "shop info";
+      "info shop";
   }
 
   section#info {
     background: #fff;
+    font-size: 1.25em;
     padding: 20px;
     margin: 1em auto;
     border-radius: $borders;
-    box-shadow: 0 10px 30px rgba(0,0,0,.2);
+    box-shadow: 0 10px 30px rgba(28, 31, 36, 0.2);
     width: 80%;
 
     @include desktop {
@@ -100,6 +101,11 @@ main {
       font-size: 3em;
       margin-top: 10px;
       text-transform: uppercase;
+      @include desktop {
+        width: 20%;
+        font-size: 3em;
+        line-height: 1em;
+      }
     }
 
     p {
